Actually fix "Music" z-index issue

--- a/wp-content/themes/wedontcare/src/scss/components/_layout.scss
+++ b/wp-content/themes/wedontcare/src/scss/components/_layout.scss
@@ -230,4 +230,8 @@ main {
 .ms-stream {
     position: relative;
     z-index: 1;
+
+    @include only-ios {
+        transform: translate3d(0, 0, 0);
+    }
 }
